--- a/netlify.toml
+++ b/netlify.toml
@@ -5,5 +5,5 @@ status = 200
 
 [[redirects]]
 from = "/swap"
-to = "https://incredible-pithivier-a342b3.netlify.app/#/swap"
+to = "https:// v2exchange.milkshakeswap.finance/#/swap"
 status = 200
